# xidown

./: .gitignore  README.md  build.py  pyproject.toml  xidown.spec
.github/workflows/: build.yml
xidown/: __init__.py  __main__.py  app.py
xidown.egg-info/: PKG-INFO
xidown/core/: __init__.py  constants.py  downloader.py  playlist.py  scanner.py  setup.py  utils.py  version.py
xidown/gui/: __init__.py  notes.py  settings.py  window.py
xidown/gui/dialogs/: exit.py  setup.py  subtitle.py
